<resources>
  
    <string name="app_name">ZeniValut</string>
    <string name="open_nav">Open Navigation Draver</string>
    <string name="close_nav">Close Navigation Draver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nick">nick</string>
    <string name="wpisz_sw_j_nick">Enter your nickname</string>
    <string name="wpisz_has_o">Enter password</string>
    <string name="krzes_o_has_o">password</string>
    <string name="nie_masz_konta">Don not have an account?</string>
    <string name="zaloguj">Log in</string>
    <string name="potwierd_has_o">Confirm password</string>
    <string name="has_o">password</string>
    <string name="balance">balance</string>
    <string name="podaj_pocz_tkowy_balans">Enter initial balance</string>
    <string name="utw_rz_konto">Create an account</string>
    <string name="zarejestruj_sie">Register</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="description">Description (optional)</string>
    <string name="pick_date">Pick date</string>
    <string name="add_transaction">Add transaction</string>
    <string name="main_balance">Balance: 0.0 PLN</string>
    <string name="eu_balance">-> 0.0 EU></string>
    <string name="your_savings">Check your savings</string>
    <string name="deadlines">Payment terms</string>
    <string name="transactions_texts">Transactions</string>
    <string name="categories_expenses">Expenses by category</string>
    <string name="delete_text">Delete</string>
    <string name="term_add_text">deadline</string>
    <string name="transaction_add_text" >Transaction</string>
    <string name="goal_add_text" >Goal</string>
    <string name="balance_text" >Balance:</string>
    <string name="scan_receipt" >Scan receipt</string>
    <string name="required_fields" >Fill in the required fields</string>
    <string name="amount_must" >Amount must be a number (00.0)</string>
    <string name="not_authenticated" >User not authenticated</string>
    <string name="transactoin_added" >Transaction added</string>
    <string name="error" >Error: </string>
    <string name="faild" >Faild: </string>
    <string name="create_photo_faild" >Failed to create photo file</string>
    <string name="get_photo_faild" >Image reading error</string>
    <string name="not_authorization" >No authorization</string>
    <string name="connection_error" >Connection error </string>
    <string name="receipt_sent" >Receipt sent. Transaction added.</string>
    <string name="receipt_error" >Error processing receipt</string>
    <string name="expenses" >Expenses</string>
    <string name="weekly_expenses" >Weekly Expenses</string>
    <string name="login_error" >Login error</string>
    <string name="passwords_not_match" >The passwords do not match</string>
    <string name="incorrect_balance" >Incorrect balance</string>
    <string name="account_created" >Account created successfully. Log in.</string>
    <string name="registration_failed" >Registration failed.</string>
    <string name="transaction_deleted" >Transaction deleted</string>
    <string name="deleting_error" >Deleting error: </string>
    <string name="transaction_delete_failed" >Failed to delete transaction</string>
    <string name="bills" >Bills</string>
    <string name="food" >Food</string>
    <string name="transport" >Transport</string>
    <string name="health" >Health</string>
    <string name="education" >Education</string>
    <string name="family" >Family</string>
    <string name="entertaiment" >Entertaiment</string>
    <string name="other" >Other</string>
    <string name="income" >income</string>
    <string name="expense" >expense</string>
    <string name="currnetAmount">Current amount</string>
    <string name="finalAmount">Final amount</string>
    <string name="add_savings">Add savings goal</string>
    <string name="savings_added">Added savings goal</string>
    <string name="update_text">Update</string>
    <string name="current_amount">Current amount: </string>
    <string name="final_amount">Final amount: </string>
    <string name="deadline">Deadline: </string>
    <string name="obligation_amount">Amount to pay: </string>
    <string name="nick_required">Enter nickname</string>
    <string name="password_required">Enter password</string>
    <string name="password_validation">Password must be at least 6 characters long</string>
    <string name="pick_deadline">Set deadline</string>
    <string name="add_obligation">Add obligation</string>
    <string name="obligation_added">Obligation added</string>
    <string name="update_savings">Update amount of savings goal</string>
    <string name="amount_not_blank">Amount cannot be blank</string>
    <string name="token_error">There is no token</string>
    <string name="wrong_amount">Wrong amount</string>
    <string name="updated_savings">Savings goal updated</string>
    <string name="text_cancel">Cancel</string>
    <string name="updated_obligation">Obligation updated</string>
    <string name="logout">Logout</string>
    <string name="paid">Paid</string>


</resources>